--- a/src/components/home-page/home-page.styles.scss
+++ b/src/components/home-page/home-page.styles.scss
@@ -1,12 +1,27 @@
 .home-wrapper{
     height: 100vh;
-    width: vw;
-    .place-holder{
-        height: 15vh;
-    }
-
+    width: 100vw;
     .home-container{
-        height: 85vh;
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        //['33, 169, 135,', '255, 50, 10']
+        .title-name{
+            font-size: 50px;
+            color: rgb(12, 235, 179);
+            padding: 20px;
+            transition: all 0.5s ease-in-out; 
+        }
+
+        .title-name:hover{
+            color: rgb(255, 50, 10);
+            margin-bottom: 50px;
+            transition: all 0.5s ease-in-out; 
+            cursor: default;
+        }
     }
 
     #main-canvas{
