--- a/src/components/home-page/home-page.styles.scss
+++ b/src/components/home-page/home-page.styles.scss
@@ -7,21 +7,96 @@
         display: flex;
         align-items: center;
         justify-content: center;
+            .link {
+                position: relative;
+                display: inline-block;
+                font-size: 180px;
+                padding: 0;
+                line-height: 1em;
+                margin: 0;
+                padding-bottom: 0;
 
-        //['33, 169, 135,', '255, 50, 10']
-        .title-name{
-            font-size: 50px;
-            color: rgb(12, 235, 179);
-            padding: 20px;
-            transition: all 0.5s ease-in-out; 
-        }
+                
+                &:hover{
+                    cursor: default;
+                }
+            }
+              
+              .link--top {
+                position: absolute;
+                color: rgb(12, 235, 179);
+                top: 0;
+                display: inline-block;
+                clip-path: polygon(0% 66%, 0% 0%, 100% 0%, 100% 40%);
+                transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1) 0.25s, color 0.5s ease 0.22s;
+              }
+              
+              .link--top:after {
+                content: "";
+                position: absolute;
+                
+                top: 50%;
+                left: 0;
+                width: 100%;
+                height: 4%;
+                background: rgb(255, 50, 10);;
+                transform: rotateZ(-2.3deg) scaleX(0%);
+                transform-origin: right top;
+                transition: transform 0.2s ease 0.22s;
+              }
+              
+              .link--bottom {
+                display: inline-block;
+                clip-path: polygon(0% 65%, 100% 40%, 100% 110%, 0% 110%);
+                text-decoration: underline;
+                color: rgb(12, 235, 179);
+                transition: color 0.5s ease 0.22s, background-position 0.2s ease 0.22s;
+                text-decoration: none;
+                background-size: 200% 8%;
+                background-position: left bottom;
+                background-repeat: no-repeat;
+                //background-image: linear-gradient(to right, red 50%, transparent 50%);
+                
+              }
+              
+              .link--bottom:after {
+                content: "";
+                position: absolute;
+                
+                top: 30%;
+                left: 0;
+                width: 100%;
+                height: 4%;
+                background: rgb(255, 50, 10);;
+                transform: rotateZ(-2deg) scaleX(0%);
+                transform-origin: right top;
+                transition: transform 0.2s ease 0.22s;
+              }
+              
+              .link:hover .link--top {
+                color: rgb(255, 50, 10);;
+                transform: translateY(-0.5em) rotateZ(-3deg);
+                transition: transform 0.2s cubic-bezier(.12,.8,.57,1.00) 0.42s;
+              }
+              
+              .link:hover .link--bottom {
+                color: rgb(255, 50, 10);;
+                background-position: 100% bottom;
+                transition:  background-position 0.2s ease;
+              }
+              
+              .link:hover .link--top:after {
+                top: 62%;
+                transform-origin: left top;
+                transform: rotateZ(-2.9deg) scaleX(100%);
+              }
+              
+              .link:hover .link--bottom:after {
+                top: 65%;
+                transform-origin: left top;
+                transform: rotateZ(-3.6deg) scaleX(100%);
+              }
 
-        .title-name:hover{
-            color: rgb(255, 50, 10);
-            margin-bottom: 50px;
-            transition: all 0.5s ease-in-out; 
-            cursor: default;
-        }
     }
 
     #main-canvas{
@@ -30,5 +105,13 @@
         top: 0; left: 0;
         width: 100%; height: 100%;
         background-color: #1E1F26;
+    }
+
+    table{
+        text-align: center;
+
+        td{
+            width: 50%;
+        }
     }
 }
