--- a/src/components/navigation-bar/navigation-bar.styles.scss
+++ b/src/components/navigation-bar/navigation-bar.styles.scss
@@ -1,5 +1,6 @@
 .navigation-bar-container{
-    //backdrop-filter: blur(3px);
+    font-family: 'Lora', serif;
+    backdrop-filter: blur(3px);
     background-color: rgb(30, 31, 38, 0.4);
     position: fixed;
     display: flex;
