--- a/src/components/home-page/home-page.styles.scss
+++ b/src/components/home-page/home-page.styles.scss
@@ -8,6 +8,7 @@
         align-items: center;
         justify-content: center;
         .link {
+          font-family: 'Lora', serif;
           position: relative;
           display: inline-block;
           font-size: 180px;
