--- a/src/components/home-page/home-page.styles.scss
+++ b/src/components/home-page/home-page.styles.scss
@@ -11,7 +11,7 @@
           font-family: 'Lora', serif;
           position: relative;
           display: inline-block;
-          font-size: 180px;
+          font-size: 10vw;
           padding: 0;
           line-height: 1em;
           margin: 0;
